Write code again

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning to be a Full Stack Developer</title>
+    <title>my learning cheatpages</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="blog">
         <div class="container">
-            <h1 class="logo">my blog</h1>
+            <h1 class="logo">my learnig cheatpagesn</h1>
             <main class="wrapper">
                 <aside class="sidebar">
                     <h2 class="section-title">All posts</h2>
