--- a/index.html
+++ b/index.html
@@ -398,12 +398,17 @@
           </ul>
           <h2 class="section-title">Authors</h2>
           <ul class="list authors">
-            
+
           </ul>
         </aside>
       </main>
     </div>
   </div>
+  <!-- <script id="template-article-link" type="text/x-handlebars-template">
+    <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
+  </script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script> -->
   <script src="js/script.js"></script>
 </body>
 
