Add Handlebars and Error with display authors on the right

--- a/index.html
+++ b/index.html
@@ -404,11 +404,21 @@
       </main>
     </div>
   </div>
-  <!-- <script id="template-article-link" type="text/x-handlebars-template">
+  <script id="template-article-link" type="text/x-handlebars-template">
     <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
   </script>
+  <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+    {{#each tags}}
+    <li><a href="#tag-{{ tag }}" class="tag-size-{{ className }}">{{ tag }} ({{ count }})</a></li>
+    {{/each}}
+  </script>
+  <script id="template-author-list-link" type="text/x-handlebars-template">
+    {{#each author}}
+    <li><a href="#{{ author }}">{{ author }}</a></li>
+    {{/each}}
+  </script>
   <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script> -->
+    src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
