Error: no filters by tags at the and of article and by authors at all

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     {{/each}}
   </script>
   <script id="template-author-list-link" type="text/x-handlebars-template">
-    {{#each author}}
+    {{#each authors}}
     <li><a href="#{{ author }}">{{ author }}</a></li>
     {{/each}}
   </script>
