--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
   </script>
   <script id="template-author-link" type="text/x-handlebars-template">
     {{#each authors}}
-    <li><a href="#author-{{ author }}">{{ author }}</a></li>
+    <a href="#author-{{ author }}"><span>{{ author }}</span></a>
     {{/each}}
   </script>
   <script id="template-tag-link" type="text/x-handlebars-template">
@@ -422,7 +422,6 @@
     <li><a href="#tag-{{ tag }}" class="tag-size-{{ className }}">{{ tag }} ({{ count }})</a></li>
     {{/each}}
   </script>
-
   <script id="template-author-list-link" type="text/x-handlebars-template">
     {{#each authors}}
     <li><a href="#author-{{ author }}">{{ author }}</a></li>
