--- a/index.html
+++ b/index.html
@@ -408,14 +408,10 @@
     <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
   </script>
   <script id="template-author-link" type="text/x-handlebars-template">
-    {{#each authors}}
     <a href="#author-{{ author }}"><span>{{ author }}</span></a>
-    {{/each}}
   </script>
   <script id="template-tag-link" type="text/x-handlebars-template">
-    {{#each tags}}
-    <li><a href="#tag-{{ tag }}"><span>{{ tag }}</span></a></li>
-    {{/each}}
+    <a href="#tag-{{ tag }}"><span>{{ tag }}</span></a>
   </script>
   <script id="template-tag-cloud-link" type="text/x-handlebars-template">
     {{#each tags}}
